--- a/add_macro.ipynb
+++ b/add_macro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
        "28  2025Q1  23526.1   2.050014"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
        "[2 rows x 114 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +893,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot cpi_series\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "plt.plot(cpi_series['month'], cpi_series['CPI'])\n",
+    "plt.title('CPI')\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('CPI')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -918,6 +933,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>month</th>\n",
+       "      <th>CPI</th>\n",
        "      <th>CPI_YoY</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -925,81 +941,92 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2018-01</td>\n",
+       "      <td>247.867</td>\n",
        "      <td>2.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2018-02</td>\n",
+       "      <td>248.991</td>\n",
        "      <td>2.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2018-03</td>\n",
+       "      <td>249.554</td>\n",
        "      <td>2.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2018-04</td>\n",
+       "      <td>250.546</td>\n",
        "      <td>2.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2018-05</td>\n",
+       "      <td>251.588</td>\n",
        "      <td>2.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>83</th>\n",
        "      <td>2024-12</td>\n",
+       "      <td>315.605</td>\n",
        "      <td>2.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>84</th>\n",
        "      <td>2025-01</td>\n",
+       "      <td>317.671</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>85</th>\n",
        "      <td>2025-02</td>\n",
+       "      <td>319.082</td>\n",
        "      <td>2.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>86</th>\n",
        "      <td>2025-03</td>\n",
+       "      <td>319.799</td>\n",
        "      <td>2.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>87</th>\n",
        "      <td>2025-04</td>\n",
+       "      <td>320.795</td>\n",
        "      <td>2.3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>88 rows × 2 columns</p>\n",
+       "<p>88 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      month  CPI_YoY\n",
-       "0   2018-01      2.1\n",
-       "1   2018-02      2.2\n",
-       "2   2018-03      2.4\n",
-       "3   2018-04      2.5\n",
-       "4   2018-05      2.8\n",
-       "..      ...      ...\n",
-       "83  2024-12      2.9\n",
-       "84  2025-01      3.0\n",
-       "85  2025-02      2.8\n",
-       "86  2025-03      2.4\n",
-       "87  2025-04      2.3\n",
+       "      month      CPI  CPI_YoY\n",
+       "0   2018-01  247.867      2.1\n",
+       "1   2018-02  248.991      2.2\n",
+       "2   2018-03  249.554      2.4\n",
+       "3   2018-04  250.546      2.5\n",
+       "4   2018-05  251.588      2.8\n",
+       "..      ...      ...      ...\n",
+       "83  2024-12  315.605      2.9\n",
+       "84  2025-01  317.671      3.0\n",
+       "85  2025-02  319.082      2.8\n",
+       "86  2025-03  319.799      2.4\n",
+       "87  2025-04  320.795      2.3\n",
        "\n",
-       "[88 rows x 2 columns]"
+       "[88 rows x 3 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1023,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1037,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1084,7 @@
        "Name: quarter, Length: 29613, dtype: period[Q-DEC]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1078,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1114,7 @@
        "0"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1157,7 @@
        "Name: month, Length: 29613, dtype: period[M]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1177,7 @@
        "0"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1165,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1182,11 +1209,11 @@
        "       'NEAR_DIST_Security', 'NEAR_DIST_Subway', 'NEAR_DIST_Culture',\n",
        "       'NEAR_DIST_Culture_District', 'NEAR_COUNT_Schools', 'NEAR_COUNT_Bus',\n",
        "       'NEAR_COUNT_Trees', 'NEAR_COUNT_Restaurants', 'quarter', 'GDP',\n",
-       "       'GDP_YoY', 'month', 'CPI_YoY'],\n",
+       "       'GDP_YoY', 'month', 'CPI', 'CPI_YoY'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1197,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
