--- a/merge_geocoded.ipynb
+++ b/merge_geocoded.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt \n",
     "import seaborn as sns\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
@@ -17,7 +17,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "min  143000.0\n",
+      "max  17757750.0\n",
+      "min  175000.0\n",
+      "max  34000000.0\n",
+      "min  147960.0\n",
+      "max  21750000.0\n",
+      "min  167000.0\n",
+      "max  15500000.0\n",
+      "min  200000.0\n",
+      "max  23000000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import glob\n",
+    "\n",
+    "\n",
+    "folders = [\"data/2019\", \"data/2020\", \"data/2021\", \"data/2022\", \"data/2023\"]\n",
+    "\n",
+    "\n",
+    "# read all the files in the folders as pandas dataframe\n",
+    "# create an empty list to store the dataframes\n",
+    "dataframes = []\n",
+    "for folder in folders:\n",
+    "    file_name = \"geocoded_merged_sales_fixed.csv\"\n",
+    "    data = pd.read_csv(f\"{folder}/{file_name}\")\n",
+    "    if \"temp_unique_id\" in data.columns:\n",
+    "        # remove that column\n",
+    "        data.drop('temp_unique_id', axis=1, inplace=True)\n",
+    "    if \"temp_unique_id_norm\" in data.columns:\n",
+    "        data.drop(\"temp_unique_id_norm\", axis=1, inplace=True)\n",
+    "    data[\"year\"] = folder.split(\"/\")[-1]\n",
+    "    print(\"min \",data[\"sale_price\"].unique().min())\n",
+    "    print(\"max \",data[\"sale_price\"].unique().max())\n",
+    "    dataframes.append(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>parcel</th>\n",
+       "      <th>sale_price</th>\n",
+       "      <th>category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4950</th>\n",
+       "      <td>18-01543-008</td>\n",
+       "      <td>143000.0</td>\n",
+       "      <td>condo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4606</th>\n",
+       "      <td>15-00389-006</td>\n",
+       "      <td>148900.0</td>\n",
+       "      <td>condo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4999</th>\n",
+       "      <td>18-06810-092</td>\n",
+       "      <td>160000.0</td>\n",
+       "      <td>condo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4997</th>\n",
+       "      <td>18-06810-130</td>\n",
+       "      <td>164000.0</td>\n",
+       "      <td>condo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4998</th>\n",
+       "      <td>18-06810-090</td>\n",
+       "      <td>165000.0</td>\n",
+       "      <td>condo</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            parcel  sale_price category\n",
+       "4950  18-01543-008    143000.0    condo\n",
+       "4606  15-00389-006    148900.0    condo\n",
+       "4999  18-06810-092    160000.0    condo\n",
+       "4997  18-06810-130    164000.0    condo\n",
+       "4998  18-06810-090    165000.0    condo"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get first dataframe and sort by sale price\n",
+    "df_sample = dataframes[0]\n",
+    "df_sample = df_sample.sort_values('sale_price', ascending=True)\n",
+    "df_sample[[\"parcel\", \"sale_price\", 'category']].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28\n",
+      "Index(['sale_date', 'sale_price', 'parcel', 'street_no', 'living_area',\n",
+      "       'category', 'price_per_sf', 'street_name', 'y', 'full_address', 'x',\n",
+      "       'owner_property_count', 'total_room_num', 'half_bathrooms',\n",
+      "       'fireplaces', 'bathrooms', 'exterior_condition', 'year_built',\n",
+      "       'properties', 'interior_condition', 'heat_type', 'kitchens',\n",
+      "       'owner_name', 'bedrooms', 'ac_type', 'parking_spots', 'foundation',\n",
+      "       'year'],\n",
+      "      dtype='object')\n",
+      "28\n",
+      "Index(['sale_date', 'sale_price', 'parcel', 'street_no', 'living_area',\n",
+      "       'category', 'price_per_sf', 'street_name', 'y', 'full_address', 'x',\n",
+      "       'owner_property_count', 'total_room_num', 'half_bathrooms',\n",
+      "       'fireplaces', 'bathrooms', 'exterior_condition', 'year_built',\n",
+      "       'properties', 'interior_condition', 'heat_type', 'kitchens',\n",
+      "       'owner_name', 'bedrooms', 'ac_type', 'parking_spots', 'foundation',\n",
+      "       'year'],\n",
+      "      dtype='object')\n",
+      "28\n",
+      "Index(['sale_date', 'sale_price', 'parcel', 'street_no', 'living_area',\n",
+      "       'category', 'price_per_sf', 'street_name', 'y', 'full_address', 'x',\n",
+      "       'owner_property_count', 'total_room_num', 'half_bathrooms',\n",
+      "       'fireplaces', 'bathrooms', 'exterior_condition', 'year_built',\n",
+      "       'properties', 'interior_condition', 'heat_type', 'kitchens',\n",
+      "       'owner_name', 'bedrooms', 'ac_type', 'parking_spots', 'foundation',\n",
+      "       'year'],\n",
+      "      dtype='object')\n",
+      "28\n",
+      "Index(['sale_date', 'sale_price', 'parcel', 'street_no', 'living_area',\n",
+      "       'category', 'price_per_sf', 'street_name', 'y', 'full_address', 'x',\n",
+      "       'owner_property_count', 'total_room_num', 'half_bathrooms',\n",
+      "       'fireplaces', 'bathrooms', 'exterior_condition', 'year_built',\n",
+      "       'properties', 'interior_condition', 'heat_type', 'kitchens',\n",
+      "       'owner_name', 'bedrooms', 'ac_type', 'parking_spots', 'foundation',\n",
+      "       'year'],\n",
+      "      dtype='object')\n",
+      "28\n",
+      "Index(['sale_date', 'sale_price', 'parcel', 'street_no', 'living_area',\n",
+      "       'category', 'price_per_sf', 'street_name', 'y', 'full_address', 'x',\n",
+      "       'owner_property_count', 'total_room_num', 'half_bathrooms',\n",
+      "       'fireplaces', 'bathrooms', 'exterior_condition', 'year_built',\n",
+      "       'properties', 'interior_condition', 'heat_type', 'kitchens',\n",
+      "       'owner_name', 'bedrooms', 'ac_type', 'parking_spots', 'foundation',\n",
+      "       'year'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for df in dataframes:\n",
+    "    print(len(df.columns))\n",
+    "    print(df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +653,7 @@
        "[0 rows x 29 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +770,7 @@
        "[242 rows x 2 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,37 +782,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# check dtype of living_area\n",
-    "data[\"living_area\"] = data[\"living_area\"].str.replace(',', '').astype(float)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0       1532.0\n",
-       "1        976.0\n",
-       "2       1878.0\n",
-       "3        850.0\n",
-       "4       1512.0\n",
-       "         ...  \n",
-       "3156    2814.0\n",
-       "3157    2325.0\n",
-       "3158    2208.0\n",
-       "3159    2268.0\n",
-       "3160    2506.0\n",
-       "Name: living_area, Length: 29855, dtype: float64"
+       "0       1,532\n",
+       "1         976\n",
+       "2       1,878\n",
+       "3         850\n",
+       "4       1,512\n",
+       "        ...  \n",
+       "3156    2,814\n",
+       "3157    2,325\n",
+       "3158    2,208\n",
+       "3159    2,268\n",
+       "3160    2,506\n",
+       "Name: living_area, Length: 29855, dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +874,7 @@
        "[0 rows x 29 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +946,7 @@
        "[0 rows x 29 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +1018,7 @@
        "[0 rows x 29 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +1066,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/wy/50c5sv7n4wsfhhww_wwjz2tr0000gn/T/ipykernel_21204/776181895.py:6: SettingWithCopyWarning: \n",
+      "/var/folders/wy/50c5sv7n4wsfhhww_wwjz2tr0000gn/T/ipykernel_91298/776181895.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -907,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -927,18 +1113,18 @@
       "3159  NaN       Parsons ST   3/30/2023  22‐04322‐000     two_family   \n",
       "3160  NaN  PRESENTATION RD  12/21/2023  22‐03588‐000     two_family   \n",
       "\n",
-      "      sale_price  street_no price_per_sf  living_area  total_room_num  ...  \\\n",
-      "0       725000.0         56       473.24       1532.0             7.0  ...   \n",
-      "1       510000.0        177       522.54        976.0             6.0  ...   \n",
-      "2       650000.0         73       346.11       1878.0             7.0  ...   \n",
-      "3       445000.0         15       523.53        850.0             4.0  ...   \n",
-      "4       725200.0        172       479.63       1512.0             7.0  ...   \n",
-      "...          ...        ...          ...          ...             ...  ...   \n",
-      "3156   1000000.0         12       355.37       2814.0            14.0  ...   \n",
-      "3157    875000.0        135       376.34       2325.0            10.0  ...   \n",
-      "3158    900000.0         48       407.61       2208.0            12.0  ...   \n",
-      "3159    875000.0         96        385.8       2268.0             8.0  ...   \n",
-      "3160   1095000.0         40       436.95       2506.0            12.0  ...   \n",
+      "      sale_price  street_no price_per_sf living_area  total_room_num  ...  \\\n",
+      "0       725000.0         56       473.24       1,532             7.0  ...   \n",
+      "1       510000.0        177       522.54         976             6.0  ...   \n",
+      "2       650000.0         73       346.11       1,878             7.0  ...   \n",
+      "3       445000.0         15       523.53         850             4.0  ...   \n",
+      "4       725200.0        172       479.63       1,512             7.0  ...   \n",
+      "...          ...        ...          ...         ...             ...  ...   \n",
+      "3156   1000000.0         12       355.37       2,814            14.0  ...   \n",
+      "3157    875000.0        135       376.34       2,325            10.0  ...   \n",
+      "3158    900000.0         48       407.61       2,208            12.0  ...   \n",
+      "3159    875000.0         96        385.8       2,268             8.0  ...   \n",
+      "3160   1095000.0         40       436.95       2,506            12.0  ...   \n",
       "\n",
       "      year_built  exterior_condition      foundation  \\\n",
       "0           1930                Good           Brick   \n",
@@ -992,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1250,7 @@
        "[0 rows x 30 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
