--- a/merge_sales.ipynb
+++ b/merge_sales.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,16 +14,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "folder_path = 'data/2020'\n",
     "\n",
-    "single_family_filename = 'single_family_sales.csv'\n",
-    "three_family_filename = 'three_family_sales.csv'\n",
-    "condo_filename = 'condo_sales.csv'\n",
-    "two_family_filename = 'two_family_sales.csv'\n",
+    "single_family_filename = 'single_family_sales_fixed.csv'\n",
+    "three_family_filename = 'three_family_sales_fixed.csv'\n",
+    "condo_filename = 'condo_sales_fixed.csv'\n",
+    "two_family_filename = 'two_family_sales_fixed.csv'\n",
     "\n",
     "single_family_sales = pd.read_csv(folder_path + \"/\" + single_family_filename)\n",
     "three_family_sales = pd.read_csv(folder_path + \"/\" + three_family_filename)\n",
@@ -34,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[575, 604, 815, 4379]\n"
+      "[575, 605, 815, 4384]\n"
      ]
     }
    ],
@@ -54,27 +54,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['parcel', 'street_no', 'street_name', 'unit', 'sale_date', 'sale_price',\n",
-      "       'living_area', 'price_per_sf', 'category'],\n",
+      "Index(['parcel', 'street_no', 'street_name', 'sale_date', 'sale_price',\n",
+      "       'living_area', 'price_per_sf', 'building_style', 'category'],\n",
+      "      dtype='object')\n",
+      "Index(['parcel', 'street_no', 'street_name', 'sale_date', 'sale_price',\n",
+      "       'living_area', 'price_per_sf', 'building_style', 'category'],\n",
       "      dtype='object')\n",
       "Index(['parcel', 'street_no', 'street_name', 'unit', 'sale_date', 'sale_price',\n",
       "       'living_area', 'price_per_sf', 'category'],\n",
       "      dtype='object')\n",
-      "Index(['parcel', 'street_no', 'street_name', 'unit', 'sale_date', 'sale_price',\n",
-      "       'living_area', 'price_per_sf', 'category'],\n",
+      "Index(['parcel', 'street_no', 'street_name', 'sale_date', 'sale_price',\n",
+      "       'living_area', 'price_per_sf', 'building_style', 'category'],\n",
       "      dtype='object')\n",
-      "Index(['parcel', 'street_no', 'street_name', 'unit', 'sale_date', 'sale_price',\n",
-      "       'living_area', 'price_per_sf', 'category'],\n",
-      "      dtype='object')\n",
-      "{'unit', 'street_name', 'sale_date', 'parcel', 'category', 'sale_price', 'street_no', 'price_per_sf', 'living_area'}\n",
-      "['unit', 'street_name', 'sale_date', 'parcel', 'category', 'sale_price', 'street_no', 'price_per_sf', 'living_area']\n"
+      "{'sale_date', 'sale_price', 'parcel', 'street_no', 'living_area', 'category', 'price_per_sf', 'street_name'}\n",
+      "['sale_date', 'sale_price', 'parcel', 'street_no', 'living_area', 'category', 'price_per_sf', 'street_name']\n"
      ]
     }
    ],
@@ -110,7 +110,7 @@
     "], ignore_index=True)\n",
     "\n",
     "# save\n",
-    "merged_sales.to_csv(f\"{folder_path}/merged_sales.csv\", index=False)\n",
+    "merged_sales.to_csv(f\"{folder_path}/merged_sales_fixed.csv\", index=False)\n",
     "\n",
     "\n",
     "\n"
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -146,30 +146,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of 2019 sales in current dataset: 662\n",
-      "Number of sales in original 2019 file: 5973\n",
-      "Warning: Found 40 records from 2019 that were not in the original 2019 file\n",
+      "Number of 2019 sales in current dataset: 663\n",
+      "Number of sales in original 2019 file: 6198\n",
+      "Warning: Found 24 records from 2019 that were not in the original 2019 file\n",
       "Sample of new records:\n",
-      "           parcel  sale_date\n",
-      "899  01-00179-000  8/29/2019\n",
-      "913  01-04909-000   8/2/2019\n",
-      "927  01-04320-001  7/23/2019\n",
-      "930  02-02060-000   8/2/2019\n",
-      "983  07-02540-001  5/31/2019\n"
+      "           parcel   sale_date\n",
+      "843  01-04069-000  10/18/2019\n",
+      "899  01-00179-000   8/29/2019\n",
+      "913  01-04909-000    8/2/2019\n",
+      "927  01-04320-001   7/23/2019\n",
+      "930  02-02060-000    8/2/2019\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/wy/50c5sv7n4wsfhhww_wwjz2tr0000gn/T/ipykernel_55192/3227019566.py:13: SettingWithCopyWarning: \n",
+      "/var/folders/wy/50c5sv7n4wsfhhww_wwjz2tr0000gn/T/ipykernel_36680/3500041024.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -181,7 +181,7 @@
    "source": [
     "# now since 2020 has both 2019 and 2020, we check if 2019 values are all included in original 2019 files\n",
     "\n",
-    "original_2019_merged_sales = pd.read_csv(f\"data/2019/merged_sales.csv\")\n",
+    "original_2019_merged_sales = pd.read_csv(f\"data/2019/merged_sales_fixed.csv\")\n",
     "\n",
     "# extract 2019 from merged_sales\n",
     "target_2019_merged_sales = merged_sales[merged_sales['sale_date'].str.endswith('2019')]\n",
@@ -204,17 +204,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "40\n",
-      "40\n",
-      "0\n",
-      "set()\n"
+      "23\n",
+      "24\n",
+      "1\n",
+      "{'01-04069-000'}\n"
      ]
     }
    ],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -264,30 +264,43 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>unit</th>\n",
-       "      <th>street_name</th>\n",
        "      <th>sale_date</th>\n",
-       "      <th>parcel</th>\n",
-       "      <th>category</th>\n",
        "      <th>sale_price</th>\n",
+       "      <th>parcel</th>\n",
        "      <th>street_no</th>\n",
-       "      <th>price_per_sf</th>\n",
        "      <th>living_area</th>\n",
+       "      <th>category</th>\n",
+       "      <th>price_per_sf</th>\n",
+       "      <th>street_name</th>\n",
        "      <th>unique_id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>843</th>\n",
+       "      <td>10/18/2019</td>\n",
+       "      <td>900000.0</td>\n",
+       "      <td>01-04069-000</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>3684.0</td>\n",
+       "      <td>three_family</td>\n",
+       "      <td>244.3</td>\n",
+       "      <td>Cottage ST</td>\n",
+       "      <td>01-04069-000_10/18/2019</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [unit, street_name, sale_date, parcel, category, sale_price, street_no, price_per_sf, living_area, unique_id]\n",
-       "Index: []"
+       "      sale_date  sale_price        parcel  street_no  living_area  \\\n",
+       "843  10/18/2019    900000.0  01-04069-000      125.0       3684.0   \n",
+       "\n",
+       "         category  price_per_sf street_name                unique_id  \n",
+       "843  three_family         244.3  Cottage ST  01-04069-000_10/18/2019  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -324,30 +337,43 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>unit</th>\n",
-       "      <th>street_name</th>\n",
        "      <th>sale_date</th>\n",
-       "      <th>parcel</th>\n",
-       "      <th>category</th>\n",
        "      <th>sale_price</th>\n",
+       "      <th>parcel</th>\n",
        "      <th>street_no</th>\n",
-       "      <th>price_per_sf</th>\n",
        "      <th>living_area</th>\n",
+       "      <th>category</th>\n",
+       "      <th>price_per_sf</th>\n",
+       "      <th>street_name</th>\n",
        "      <th>unique_id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>947</th>\n",
+       "      <td>12/19/2019</td>\n",
+       "      <td>1300000.0</td>\n",
+       "      <td>01-04069-000</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>3684.0</td>\n",
+       "      <td>three_family</td>\n",
+       "      <td>352.88</td>\n",
+       "      <td>Cottage ST</td>\n",
+       "      <td>01-04069-000_12/19/2019</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [unit, street_name, sale_date, parcel, category, sale_price, street_no, price_per_sf, living_area, unique_id]\n",
-       "Index: []"
+       "      sale_date  sale_price        parcel  street_no  living_area  \\\n",
+       "947  12/19/2019   1300000.0  01-04069-000      125.0       3684.0   \n",
+       "\n",
+       "         category  price_per_sf street_name                unique_id  \n",
+       "947  three_family        352.88  Cottage ST  01-04069-000_12/19/2019  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,21 +397,21 @@
     "original_2019_merged_sales = original_2019_merged_sales.drop(columns=['unique_id'])\n",
     "\n",
     "# save the original 2019 merged sales\n",
-    "original_2019_merged_sales.to_csv(f\"data/2019/merged_sales.csv\", index=False)\n",
+    "original_2019_merged_sales.to_csv(f\"data/2019/merged_sales_fixed.csv\", index=False)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6372\n",
-      "6373\n"
+      "6378\n",
+      "6379\n"
      ]
     }
    ],
