Update new code

--- a/merge_sales.ipynb
+++ b/merge_sales.ipynb
@@ -403,6 +403,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# also we should remove year 2019 from 2020\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [
