--- a/review_enriched_data.ipynb
+++ b/review_enriched_data.ipynb
@@ -4262,7 +4262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -4295,7 +4295,7 @@
        "      <th>price_per_sf</th>\n",
        "      <th>street_name</th>\n",
        "      <th>temp_unique_id</th>\n",
-       "      <th>y</th>\n",
+       "      <th>temp_unique_id_norm</th>\n",
        "      <th>...</th>\n",
        "      <th>year_built</th>\n",
        "      <th>properties</th>\n",
@@ -4312,18 +4312,18 @@
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 28 columns</p>\n",
+       "<p>0 rows × 29 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [sale_date, sale_price, parcel, street_no, living_area, category, price_per_sf, street_name, temp_unique_id, y, full_address, x, owner_property_count, total_room_num, half_bathrooms, fireplaces, bathrooms, exterior_condition, year_built, properties, interior_condition, heat_type, kitchens, owner_name, bedrooms, ac_type, parking_spots, foundation]\n",
+       "Columns: [sale_date, sale_price, parcel, street_no, living_area, category, price_per_sf, street_name, temp_unique_id, temp_unique_id_norm, y, full_address, x, owner_property_count, total_room_num, half_bathrooms, fireplaces, bathrooms, exterior_condition, year_built, properties, interior_condition, heat_type, kitchens, owner_name, bedrooms, ac_type, parking_spots, foundation]\n",
        "Index: []\n",
        "\n",
-       "[0 rows x 28 columns]"
+       "[0 rows x 29 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4334,7 +4334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
